# opportunity-radar

./: .gitignore  README.md  app.py  pyproject.toml  reprocess_data.py  reset_data.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.streamlit/: config.toml
backend/: pipeline.py  storage.py
backend/data_verification/: fix_ko_translations.py  reset_data.py
backend/logic/: filters.py  prompts.py
backend/repositories/: __init__.py  base_repository.py  card_repository.py
data/: cards.json  discarded_signals.json  reports.json
docs/: issue_bug_report.md
src/: config.py  ingestion.py  llm_service.py  models.py  parsing.py  pipeline.py  signal_extraction.py  storage.py
src/logic/: filters.py
src/repositories/: report_repository.py
src/services/: __init__.py  llm_client.py  prompt_templates.py  translation_service.py
src/ui/: components.py  layout.py  localization.py  styles.py  utils.py
src/ui/styles/: __init__.py  base.py  buttons.py  cards.py  chips.py  components.py  dialogs.py  forms.py  sidebar.py  utilities.py
tests/: debug_feed.py  smoke_test.py
